Simple heuristic trader addition + extrapolation logic

--- a/Trade Creation Example.ipynb
+++ b/Trade Creation Example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "a9d45d4c",
+   "id": "3a5a3e67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "9f4c63b1",
+   "id": "73ed5011",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "70aec748",
+   "id": "c7859b66",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "69afd0f4",
+   "id": "0e8cbecc",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7d003a03",
+   "id": "2ccf94c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "4a0d5e68",
+   "id": "05ebce79",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "be6aa641",
+   "id": "7e2a7cbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "13f7a823",
+   "id": "9ccf1dd6",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c7ae2158",
+   "id": "54629943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "cc216f48",
+   "id": "2c283055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "3c70e415",
+   "id": "5002676e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "d2c0898f",
+   "id": "e0e8d20d",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "638f4896",
+   "id": "04cf3639",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "6085119c",
+   "id": "2c472f57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "6189c9f1",
+   "id": "a9c3f03b",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0c89782f",
+   "id": "13301d02",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ce863af1",
+   "id": "15f48727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c6d9ecfe",
+   "id": "7cdb7b79",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50b09334",
+   "id": "f0ca693e",
    "metadata": {},
    "source": [
     "$$ A \\cdot B = C$$\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037b90ad",
+   "id": "c94fb55a",
    "metadata": {},
    "source": [
     "$$ \\frac{A}{B} = R_{1}$$\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34bbb383",
+   "id": "29c80d9a",
    "metadata": {},
    "source": [
     "$$ A \\Delta B + [B  + \\Delta B] \\cdot [B R_{2} + \\Delta B R_{2} - B R_{1}] - B R_{1}] = 0$$\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "fa99ed93",
+   "id": "10f992c2",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "d7ab2891",
+   "id": "2c096f6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,59 +405,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "dd13de5a",
+   "execution_count": 211,
+   "id": "b3679e92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if true < rai_res / eth_res:\n",
-    "    action = \"tokenPurchase\"\n",
-    "else:\n",
-    "    action = \"ethPurchase\""
+    "def agent_action(signal, s):\n",
+    "    #Find current ratio\n",
+    "    current_ratio = s['RAI_balance'] / s['ETH_balance']\n",
+    "    eth_res = s['ETH_balance']\n",
+    "    rai_res = s['RAI_balance']\n",
+    "    \n",
+    "    \n",
+    "    #Find the side of the trade\n",
+    "    if signal < current_ratio:\n",
+    "        action_key = \"eth_sold\"\n",
+    "    else:\n",
+    "        action_key = \"tokens_sold\"\n",
+    "    \n",
+    "    #Constant for equations\n",
+    "    C = rai_res * eth_res\n",
+    "    \n",
+    "    #Find the maximum shift that the trade should be able to sap up all arbitrage opportunities\n",
+    "    max_shift = abs(rai_res / eth_res - true)\n",
+    "    \n",
+    "    #Start with a constant choice of 10 eth trade\n",
+    "    eth_size = 10\n",
+    "    \n",
+    "    #Decide on sign of eth\n",
+    "    if action == \"eth_sold\":\n",
+    "        eth_delta = eth_size\n",
+    "    else:\n",
+    "        eth_delta = -eth_size\n",
+    "    \n",
+    "    #Compute the RAI delta to hold C constant\n",
+    "    rai_delta = C / (eth_res + eth_delta) - rai_res\n",
+    "    \n",
+    "    #Caclulate the implied shift in ratio\n",
+    "    implied_shift = abs((rai_res + rai_delta)/ (eth_res + eth_delta) - rai_res / eth_res)\n",
+    "    \n",
+    "    #While the trade is too large, cut trade size in half\n",
+    "    while implied_shift > max_shift:\n",
+    "        \n",
+    "        #Cut trade in half\n",
+    "        eth_size = eth_size/2\n",
+    "        rai_delta = C / (eth_res + eth_delta) - rai_res\n",
+    "        implied_shift = abs((rai_res + rai_delta)/ (eth_res + eth_delta) - rai_res / eth_res)\n",
+    "\n",
+    "    if action_key == \"eth_sold\":\n",
+    "        I_t = s['ETH_balance']\n",
+    "        O_t = s['RAI_balance']\n",
+    "        I_t1 = s['ETH_balance']\n",
+    "        O_t1 = s['RAI_balance']\n",
+    "        delta_I = eth_delta\n",
+    "        delta_O = rai_delta\n",
+    "    else:\n",
+    "        I_t = s['RAI_balance']\n",
+    "        O_t = s['ETH_balance']\n",
+    "        I_t1 = s['RAI_balance']\n",
+    "        O_t1 = s['ETH_balance']\n",
+    "        delta_I = rai_delta\n",
+    "        delta_O = eth_delta\n",
+    "    return I_t, O_t, I_t1, O_t1, delta_I, delta_O, action_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "7ad48ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = {\"RAI_balance\": 4960695.994,\n",
+    "    \"ETH_balance\": 7740.958682}\n",
+    "signal = 651.4802496080162"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "11a281c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4960695.994,\n",
+       " 7740.958682,\n",
+       " 4960695.994,\n",
+       " 7740.958682,\n",
+       " 6416.66344117187,\n",
+       " -10,\n",
+       " 'tokens_sold')"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_action(signal, s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "2a5a7b3d",
+   "id": "a0d51c20",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "C = rai_res * eth_res\n",
-    "max_shift = abs(rai_res / eth_res - true)\n",
-    "eth_size = 10"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "2e3b5c8e",
+   "id": "71ed815d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if action == \"tokenPurchase\":\n",
-    "    eth_delta = eth_size\n",
-    "else:\n",
-    "    eth_delta = -eth_size\n",
+    "\n",
     "    \n",
-    "rai_delta = C / (eth_res + eth_delta) - rai_res\n",
-    "implied_shift = abs((rai_res + rai_delta)/ (eth_res + eth_delta) - rai_res / eth_res)\n",
     "\n",
-    "while implied_shift > max_shift:\n",
-    "    eth_size = eth_size/2\n",
-    "    if action == \"tokenPurchase\":\n",
-    "        eth_delta = eth_size\n",
-    "    else:\n",
-    "        eth_delta = -eth_size\n",
-    "\n",
-    "    rai_delta = C / (eth_res + eth_delta) - rai_res\n",
-    "    implied_shift = abs((rai_res + rai_delta)/ (eth_res + eth_delta) - rai_res / eth_res)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "f1390cfc",
+   "id": "4907b49b",
    "metadata": {},
    "outputs": [
     {
@@ -478,15 +553,20 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "7f7ba366",
+   "id": "03cc5a5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "        delta_I = uniswap_events['eth_delta'][t]\n",
+    "        delta_O = uniswap_events['token_delta'][t]\n",
+    "        action_key = 'eth_sold'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "db598996",
+   "id": "311f098d",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "36051868",
+   "id": "93bc5c9c",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "75e786fc",
+   "id": "3ba681f3",
    "metadata": {},
    "outputs": [
     {
@@ -549,10 +629,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b49bfd07",
+   "id": "10010151",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "I_t, O_t, I_t1, O_t1, delta_I, delta_O, action_key"
+   ]
   }
  ],
  "metadata": {
